[project]
name = "unstructured"
version = "0.1.0"
description = ""
authors = [
    {name = "karthik nadar",email = "karthiknadar1204@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pillow (>=12.1.1,<13.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "paddlepaddle (>=3.3.0,<4.0.0)",
    "paddleocr (>=3.4.0,<4.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "markdown-it-py (>=4.0.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "unstructured", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
